add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -295,6 +295,6 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>nwbcxcgsch djsnrrfbhn kvrqtmxocm gkqvqbunpd etjlmgkpql kenuyddelp hghjujkgbf wqdkogttto mooljgmudw nddwcsbsba</div>
+  <div>xupmxpwjud iwafdenxib yivfefhskm mcapoicmor amnmcguhlj rrosluxcns rlpbctvcik</div>
 </body>
 </html>
