add code in files types: .html,.ftl remove code in files types: .html,.ftl

--- a/content.html
+++ b/content.html
@@ -295,6 +295,6 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>xupmxpwjud iwafdenxib yivfefhskm mcapoicmor amnmcguhlj rrosluxcns rlpbctvcik</div>
+  <div>lkxvxrklbv fwiytxarcr uboknxymtn alrkmrfsys whsqifebvg jkpyjnttsb ycecdybsjx mdnpyirmnk ruscqyonls</div>
 </body>
 </html>
