add code in files types: .java,.html,.css,.scss,.js,.ftl remove code in files types: .java,.html,.hbs,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -295,6 +295,6 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>uqklijexcp leyksmxgti iwgrmjglir etpbgqrnqq rgmaqgllsn sroenjdgnu hvlaansrab safrtlsdsg vyoyqexnrv gfjibfnwfk</div>
+  <div>odijlicufe tlildvyyif</div>
 </body>
 </html>
