add code in files types: .js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -295,6 +295,6 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>sjouabfndr xtxhbdjgfx ocisyncren lrikcteawx cwrewrlajv nfflxlpenh gaiemxwyog tskhhmwxhu ibluslixnv dolasfkyyo</div>
+  <div>jvofuiuuvc gpvwkamjtn lvkiptlqmm tsnhdctrif djyovfyrpp</div>
 </body>
 </html>
