add code in files types: .hbs,.scss,.ftl remove code in files types: .hbs,.scss,.ftl

--- a/content.html
+++ b/content.html
@@ -295,6 +295,6 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>iisfjvmtpc fddcslqphw mstpflnjvf iwicugspsy xkknfpgyyk cwwepddnvk okyslcqleo gsgvtskuev</div>
+  <div>jluddurasx ylowivkewy ybdggmrojv</div>
 </body>
 </html>
