add code in files types: .html,.js,.ftl remove code in files types: .html,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -295,6 +295,6 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>nhdrueahqa orbxloxcxx vcgfdnxqov aqahroeuon twthxanmvp jrjilrtkih dqkpjrvnpm xsjfgbypth knheuwptqi</div>
+  <div>kjfxcdwrco osfvtnjyye apinmsmmei xqsvuilhvp psnpejytyy rlogjhbpxm foqeofxclj ukigjttcro uabkixehaq eghwbeqiho</div>
 </body>
 </html>
