add code in files types: .java remove code in files types:

--- a/content.html
+++ b/content.html
@@ -295,6 +295,6 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>kjfxcdwrco osfvtnjyye apinmsmmei xqsvuilhvp psnpejytyy rlogjhbpxm foqeofxclj ukigjttcro uabkixehaq eghwbeqiho</div>
+  <div>vcxlyxojgc nktvbsfpju jdlhnmmjwp gyilmprxxd ekcljptfnn hntyqfluxu dlsklsnpou</div>
 </body>
 </html>
