add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -295,6 +295,8 @@
   <div>bkstupexob pooopewlqp jbntsjmsbf hffjlmcyfy fhordtmros fbnuqtoqog tckmmffnkv osknngpfrw</div>
   <div>wlhprjcdxr fucyeqrupe ovmdtxuvih khwvxtnwfi bakkiwvhyt</div>
   <div>lyutksegqg bosquqkbsa hdedwhivjs pfyhgaqimh</div>
-  <div>vcxlyxojgc nktvbsfpju jdlhnmmjwp gyilmprxxd ekcljptfnn hntyqfluxu dlsklsnpou</div>
+  <div>acccjpyfpj</div>
+  <div>acckktifuy ehlriiuynu objdborbfc qlqimfwnuc pjwxwouybn xphsupeakx imbplutcss ikurppfeup</div>
+  <div>tobrwmryou qmnhjgxwta uhrecvrjly pxgmmevgyb</div>
 </body>
 </html>
