add code in files types: ,.avsc,.java,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.java,.hbs,.js,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -298,5 +298,6 @@
   <div>acccjpyfpj</div>
   <div>acckktifuy ehlriiuynu objdborbfc qlqimfwnuc pjwxwouybn xphsupeakx imbplutcss ikurppfeup</div>
   <div>tobrwmryou qmnhjgxwta uhrecvrjly pxgmmevgyb</div>
+  <div>thdrcjwiww nwfktmymdo aulfhtbcto</div>
 </body>
 </html>
