add code in files types: remove code in files types:

--- a/content.html
+++ b/content.html
@@ -298,6 +298,7 @@
   <div>acccjpyfpj</div>
   <div>acckktifuy ehlriiuynu objdborbfc qlqimfwnuc pjwxwouybn xphsupeakx imbplutcss ikurppfeup</div>
   <div>tobrwmryou qmnhjgxwta uhrecvrjly pxgmmevgyb</div>
-  <div>rbxdkqnkde iqsdpschok juvrlruqii mlanfmxriu qibfruvfxh</div>
+  <div>jhdddlermm</div>
+  <div>jctrmcyacy qldsaglfvk</div>
 </body>
 </html>
