add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -299,6 +299,6 @@
   <div>acckktifuy ehlriiuynu objdborbfc qlqimfwnuc pjwxwouybn xphsupeakx imbplutcss ikurppfeup</div>
   <div>tobrwmryou qmnhjgxwta uhrecvrjly pxgmmevgyb</div>
   <div>jhdddlermm</div>
-  <div>jctrmcyacy qldsaglfvk</div>
+  <div>atbyqkwiim tmnqpfnbkd tsscwjdxyv</div>
 </body>
 </html>
