add code in files types: ,.xml,.avsc,.sh,.sql,.java,.properties,.html,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.xml,.sh,.sql,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -300,5 +300,6 @@
   <div>tobrwmryou qmnhjgxwta uhrecvrjly pxgmmevgyb</div>
   <div>jhdddlermm</div>
   <div>oitnelcyyx xctocolfma peldkmmhco iruuusfhlx</div>
+  <div>cnqrtvwdja pjtrcnphxj atnobnlhsp yrjlrpoaqn heogbjmiiy xaecbpowrs csxxivwbud auafpslrwd lkqcenuseu</div>
 </body>
 </html>
