add code in files types: ,.xml,.avsc,.sh,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.xml,.sh,.sql,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -301,5 +301,6 @@
   <div>jhdddlermm</div>
   <div>oitnelcyyx xctocolfma peldkmmhco iruuusfhlx</div>
   <div>cnqrtvwdja pjtrcnphxj atnobnlhsp yrjlrpoaqn heogbjmiiy xaecbpowrs csxxivwbud auafpslrwd lkqcenuseu</div>
+  <div>ufgwmmayum mlkihtnoob kvimhikvqw icqlbrsxih eqaiwjxuyh qjwmycaigs eybwavkixt tfoqdtyrgh</div>
 </body>
 </html>
