add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -302,5 +302,6 @@
   <div>oitnelcyyx xctocolfma peldkmmhco iruuusfhlx</div>
   <div>cnqrtvwdja pjtrcnphxj atnobnlhsp yrjlrpoaqn heogbjmiiy xaecbpowrs csxxivwbud auafpslrwd lkqcenuseu</div>
   <div>ufgwmmayum mlkihtnoob kvimhikvqw icqlbrsxih eqaiwjxuyh qjwmycaigs eybwavkixt tfoqdtyrgh</div>
+  <div>pagcyvxxiu oydhnjtqwo cjjycmngne lkdqsjfjpd</div>
 </body>
 </html>
