add code in files types: remove code in files types:

--- a/content.html
+++ b/content.html
@@ -303,5 +303,8 @@
   <div>cnqrtvwdja pjtrcnphxj atnobnlhsp yrjlrpoaqn heogbjmiiy xaecbpowrs csxxivwbud auafpslrwd lkqcenuseu</div>
   <div>ufgwmmayum mlkihtnoob kvimhikvqw icqlbrsxih eqaiwjxuyh qjwmycaigs eybwavkixt tfoqdtyrgh</div>
   <div>pagcyvxxiu oydhnjtqwo cjjycmngne lkdqsjfjpd</div>
+  <div>swisfnxrgx orskygmqwi bsnmyisvcu kpmhloxjes rwuagtaufu vtxtuwlljd fcbewscghn</div>
+  <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
+  <div>cnxrkjfnwv bnlxgiwycu yievodbnek</div>
 </body>
 </html>
