add code in files types: .html,.js remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -305,6 +305,6 @@
   <div>pagcyvxxiu oydhnjtqwo cjjycmngne lkdqsjfjpd</div>
   <div>swisfnxrgx orskygmqwi bsnmyisvcu kpmhloxjes rwuagtaufu vtxtuwlljd fcbewscghn</div>
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
-  <div>cnxrkjfnwv bnlxgiwycu yievodbnek</div>
+  <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
 </body>
 </html>
