add code in files types: ,.xml,.sh,.json,.java,.sql,.properties,.html,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.xml,.sh,.json,.sql,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -306,5 +306,6 @@
   <div>swisfnxrgx orskygmqwi bsnmyisvcu kpmhloxjes rwuagtaufu vtxtuwlljd fcbewscghn</div>
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
+  <div>jtghtbbmfj</div>
 </body>
 </html>
