add code in files types: ,.sh,.json,.java,.html,.js,.css,.scss,.ftl remove code in files types: ,.json,.java,.html,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -307,6 +307,6 @@
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
-  <div>ysjwyeudlx rjrvwsccwc qcshmklxho ymnqytandb wcnijasyib qrisadoycg gsastjruvb ghnbcjrqnd</div>
+  <div>jjwruiehaf dkdmkqoksn oixohxcnhf jtvpdbceby xqxoprkode qvaaibnfox opxlmutect phiogvnidt usuqcoaiae</div>
 </body>
 </html>
