add code in files types: .html,.js remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -307,6 +307,6 @@
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
-  <div>auonyhoasn wmoxtydiep nxxdctancm axianemgqc pbewwtjqps qjobaaarxq yhqheqcspa dukohenbst</div>
+  <div>aufhnevxlm bsffcpwsdv thtfmmlixu dgsrifaboy mghraqllft bxdqxsmhqc hnliyibpws ucgpqgphlu llnwmpxhmk sdnkukxocp</div>
 </body>
 </html>
