add code in files types: .sql,.java,.html,.js,.ftl remove code in files types: .sql,.java,.html,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -307,6 +307,6 @@
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
-  <div>kklgttdvsf ksplfecpmr eejvqlxrcm gpybqyfobb</div>
+  <div>htcwswfogb xreqvojmuj iveqgepjla emgjkwjhou urfkmvcoxg fxoowpnpkl tihgkujksj</div>
 </body>
 </html>
