add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -307,6 +307,6 @@
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
-  <div>nndddsdqas agcybwswbf</div>
+  <div>gyiuugklxs oudcvlnfpp kfpsrkadxy xlxbjadinc vwskxifour fttwmvmusc afbjcgxbqi wxdpkicqte sbosbxumbb gpubmjaiho</div>
 </body>
 </html>
