add code in files types: ,.avsc,.py,.sh,.txt,.java,.git-id,.sql,.xml,.properties,.json,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.avsc,.py,.sh,.txt,.java,.git-id,.json,.sql,.xml,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -307,6 +307,6 @@
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
-  <div>qfytdahxof rrmeqfjxxw rfnowpyejb dlxbpxfovm nqhdnydssj rypflnddgr</div>
+  <div>moruhraljd pdvwtaqgpx yaypbttsie hehtmvjdrt kstecrwhpb oynhwssolb vsgcilaeja vkxvgfsjis liojilowmo</div>
 </body>
 </html>
