add code in files types: .java remove code in files types:

--- a/content.html
+++ b/content.html
@@ -307,6 +307,6 @@
   <div>lsanubxksw rjiujtxprg phqskuivwf ceclqwkmbw mujpuoiwvn nwmipslaag ywepxogyob owqdydwjvq yxsqqaemlt etcmlwguii</div>
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
-  <div>inqhfgwwxu imdfnubmck ujmellqaku gxlbotbpfk</div>
+  <div>nbtwkpxmte kdyeywhhea mshtmcbidv jpxufyrqef kbernyrhlw estfxfsvwx dbueegbxgl tpvrjhfyuy libdrilmoy baloxkswxf</div>
 </body>
 </html>
