add code in files types: .conf,.html remove code in files types: .conf

--- a/content.html
+++ b/content.html
@@ -308,5 +308,6 @@
   <div>ibvqkbhgdc vgktdcfcfs xdldsjodjs pgwhgkjxsc cfcsmnqhrn yqdyukkxyj olyewlgtnb</div>
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
   <div>asfpuflmii gnbqhyyxou etwfblfuxu</div>
+  <div>hwgefqmluy xmwfwcolwh agsekfkskq jyalxlhvrp oqmctbjwdh sflauydenb lkgxlxfxeb drvjsvewsa</div>
 </body>
 </html>
