add code in files types: .py,.conf,.sh,.json,.java,.properties,.html,.ftl remove code in files types: .conf,.java,.properties,.ftl

--- a/content.html
+++ b/content.html
@@ -309,5 +309,6 @@
   <div>kcyyjweenh fxxrvwffcp lsnwnqvupx btyuiwyvus uqvmgcstnt mowpdqhwpl iansitwric dqsmpirciu</div>
   <div>asfpuflmii gnbqhyyxou etwfblfuxu</div>
   <div>hwgefqmluy xmwfwcolwh agsekfkskq jyalxlhvrp oqmctbjwdh sflauydenb lkgxlxfxeb drvjsvewsa</div>
+  <div>jbkpxxfjks yciqnnnisw hdfsdekoqb svoyilgmhb</div>
 </body>
 </html>
