add code in files types: .py,.conf,.java,.properties,.html remove code in files types: .conf,.java,.properties

--- a/content.html
+++ b/content.html
@@ -310,5 +310,6 @@
   <div>asfpuflmii gnbqhyyxou etwfblfuxu</div>
   <div>hwgefqmluy xmwfwcolwh agsekfkskq jyalxlhvrp oqmctbjwdh sflauydenb lkgxlxfxeb drvjsvewsa</div>
   <div>jbkpxxfjks yciqnnnisw hdfsdekoqb svoyilgmhb</div>
+  <div>furseuwwqh adlgrlukqr</div>
 </body>
 </html>
