add code in files types: .py remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -311,5 +311,6 @@
   <div>hwgefqmluy xmwfwcolwh agsekfkskq jyalxlhvrp oqmctbjwdh sflauydenb lkgxlxfxeb drvjsvewsa</div>
   <div>jbkpxxfjks yciqnnnisw hdfsdekoqb svoyilgmhb</div>
   <div>furseuwwqh adlgrlukqr</div>
+  <div>cgqdgonppk</div>
 </body>
 </html>
