add code in files types: .py,.sh,.conf,.json,.java,.sql,.git-id,.properties,.html,.js,.ftl remove code in files types: .py,.conf,.sh,.java,.sql,.git-id,.properties,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -312,5 +312,6 @@
   <div>jbkpxxfjks yciqnnnisw hdfsdekoqb svoyilgmhb</div>
   <div>furseuwwqh adlgrlukqr</div>
   <div>cgqdgonppk</div>
+  <div>tewvvhufgu xwvccjqllt ltvlbtfxuk sybnocsiik lqapdjjjsn qkrtkdmeym</div>
 </body>
 </html>
