add code in files types: ,.xml,.avsc,.sh,.py,.conf,.js,.json,.txt,.java,.git-id,.sql,.properties,.html,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.xml,.avsc,.sh,.py,.conf,.json,.txt,.js,.java,.git-id,.sql,.properties,.html,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -312,6 +312,6 @@
   <div>jbkpxxfjks yciqnnnisw hdfsdekoqb svoyilgmhb</div>
   <div>furseuwwqh adlgrlukqr</div>
   <div>cgqdgonppk</div>
-  <div>tewvvhufgu xwvccjqllt ltvlbtfxuk sybnocsiik lqapdjjjsn qkrtkdmeym</div>
+  <div>phrriafbmi ijkkojsevj elrtffdxpc pikmddhxby mvulqbmrnj hsbhlultuh xuyvgytlbp ydlogcunbn</div>
 </body>
 </html>
