add code in files types: .hbs,.js,.scss,.css,.ftl remove code in files types: .css

--- a/content.html
+++ b/content.html
@@ -314,5 +314,6 @@
   <div>cgqdgonppk</div>
   <div>phrriafbmi ijkkojsevj elrtffdxpc pikmddhxby mvulqbmrnj hsbhlultuh xuyvgytlbp ydlogcunbn</div>
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
+  <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
 </body>
 </html>
