add code in files types: ,.java,.sql,.xml,.js,.hbs,.css,.scss,.ftl remove code in files types: ,.sql,.java,.xml,.js,.css,.scss,.ftl

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>umibgjyspu pkvyllwbph vxvuykobac jxwmytajbq</div>
+  <div>qrnnwnthdy sehsglyuqb qipcfvetrq</div>
 </body>
 </html>
