add code in files types: ,.avsc,.java,.sql,.html,.js,.ftl remove code in files types: ,.java,.html,.js,.ftl

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>qlbodeurqo wtvivgbeda gbyitctspm sajmjrqyqw njbwophhci ituiovirch xowxdkkreo tsqylhsbrl</div>
+  <div>sgyngdtarv etsiyokakv csosjvbcvt pacaumywai vtckxrlhge ihvlkpodog</div>
 </body>
 </html>
