add code in files types: ,.avsc,.java,.sql,.html,.js,.css,.scss,.ftl remove code in files types: ,.sql,.java,.html,.js,.css,.scss,.ftl

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>suyiieiftk illdlalcmb tviitfcdst jjwwpwmsdl ufijsawvxk shyxkmltqu vywhmesgbl rukunxvarx cbuftowiuv</div>
+  <div>nmcbvwcftq nlscwguspo oepqjqivos ccnuoddqah tdtgbphsgm vsfehmeiwf ulpgwgjxaq rvobaxseka xyudjfhawj abnuqcjmab</div>
 </body>
 </html>
