add code in files types: .html,.js remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>qcexlgotff tqwcmkwlui teawgiywqk lxmuqmyjml smejoqmdmr hgxnnagtxl hwmtaabnas sqfkmiynqn</div>
+  <div>qeqsqulvsy vchqyurhbj oydtxagkfi eccxxfyiqv tlacdntfyu vvrbyurdus yqnkvfmebk apxestafdf</div>
 </body>
 </html>
