add code in files types: ,.avsc,.sh,.java,.sql,.xml,.html,.js,.hbs,.scss,.css,.map,.ftl remove code in files types: ,.sh,.sql,.java,.xml,.html,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>dghhhqrohf sqjjeajqyq oaemtewliu rrecnlsrds</div>
+  <div>dlenmoaaga vkwsjarejc mlqvlewkmo dvmqclorei rrhtncdcqy</div>
 </body>
 </html>
