add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>spqidlcsth opemopyqsc rhivwqrcdj fdrmsvjipi</div>
+  <div>siwfohilym oyyagqsght tayuhkrvao rvmepnowhs</div>
 </body>
 </html>
