add code in files types: ,.avsc,.sh,.json,.java,.git-id,.sql,.properties,.html,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: ,.sh,.json,.java,.git-id,.sql,.xml,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>siwfohilym oyyagqsght tayuhkrvao rvmepnowhs</div>
+  <div>oyrcblbylj mwyigbkdmb irgqafmbcx jlqnqciqps vctxvabwgw eypxoeywjp ijfogygktc</div>
 </body>
 </html>
