add code in files types: ,.avsc,.py,.sh,.json,.java,.git-id,.sql,.xml,.properties,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.py,.sh,.json,.java,.sql,.git-id,.xml,.html,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>mupntrtywp myfcafhkvv lvjukkmotb</div>
+  <div>kiemwrismx gomgpbrhwt ujwxkuxnev aktmlcadfu kocecthhlk synmgosgyf xucpapdmvt epucrmkktv wmvlpbysdo</div>
 </body>
 </html>
