add code in files types: .java,.js,.ftl remove code in files types: .java,.js

--- a/content.html
+++ b/content.html
@@ -316,6 +316,6 @@
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
-  <div>kiemwrismx gomgpbrhwt ujwxkuxnev aktmlcadfu kocecthhlk synmgosgyf xucpapdmvt epucrmkktv wmvlpbysdo</div>
+  <div>itgmggbncv unaerykure cwhvbxuwna fdaemrkikg gamrrgdtxe dhfhqwtefg ajdqohrtmu nkhouneenb fspmqubkjy uojbfkrrve</div>
 </body>
 </html>
