add code in files types: .java remove code in files types: .java

--- a/content.html
+++ b/content.html
@@ -317,5 +317,6 @@
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
   <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
   <div>qrnkflxuag ieqysywnqr ougflosecc</div>
+  <div>vtqvteriet vjqlbxamhx</div>
 </body>
 </html>
