add code in files types: ,.avsc,.py,.sh,.json,.java,.sql,.git-id,.md,.xml,.properties,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.py,.sh,.json,.java,.sql,.git-id,.xml,.html,.js,.hbs,.scss,.css,.map,.svg,.ftl

--- a/content.html
+++ b/content.html
@@ -315,6 +315,6 @@
   <div>phrriafbmi ijkkojsevj elrtffdxpc pikmddhxby mvulqbmrnj hsbhlultuh xuyvgytlbp ydlogcunbn</div>
   <div>rptnhxodob esxxtyeeth ovyrkafrrl qkdmftxved yrkxuodpqb</div>
   <div>fpndntvsok ogbtbkpfiu lsypbuhbfn thcrirehno wrpuwvbhjn xrsrvaivcx obnqbvfesw watvlohjmv</div>
-  <div>jamhyfjcvu gxghewfway ianksqymkr mpjyatebtl antjqktngk ktaaatvfsy vusyejbmdm jiynegjfpa</div>
+  <div>vjvbleaqyj llqkaqvbyl qnwlxscjqs</div>
 </body>
 </html>
